--- a/index.html
+++ b/index.html
@@ -38,27 +38,27 @@
 
 				<!-- Two -->
 					<section id="two">
-						<h2>Recent Personal Work</h2>
+						<h2>What I do</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/thumbs/01.jpg" alt=""/>
 								<h3>Gazette API</h3>
-								<p>Get breaking news from leading newspapers. A beautiful harmony of parsers and NLP in a neat API. </p>
+								<p>Get breaking news from leading newspapers. A beautiful harmony of parsers and NLP in a neat API. Not available to public.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/thumbs/02.jpg" alt=""/>
 								<h3>Down the Tube</h3>
-								<p>Unleash your favorite content from YouTube in form of audio and video. Playlists are supported as well.</p>
+								<p>Unleash your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://usefulbits.substack.com/p/download-video-and-audio-from-youtube">Read my post.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/thumbs/03.jpg" alt=""/>
 								<h3>Con Man</h3>
-								<p>Create your own world of fake personalities: names, profile photos, education and employment history, so on.</p>
+								<p>Create your own world of fake personalities: names, profile photos, education and employment history, so on. Work ongoing.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/thumbs/04.jpg" alt=""/>
 								<h3>Useful Bits</h3>
-								<p>A Substack blog where I praise great products that I use every day.</p>
+								<p>A Substack blog where I praise great products that I use every day. <a href="https://usefulbits.substack.com/">Blog home.</a></p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -86,10 +86,6 @@
 							</div> -->
 							<div class="col-4 col-12-small">
 								<ul class="labeled-icons">
-									<li>
-										<h3 class="icon solid fa-mobile-alt"><span class="label">Phone</span></h3>
-										+90 545 110 7940
-									</li>
 									<li>
 										<h3 class="icon brands fa-telegram"><span class="label">Telegram</span></h3>
 										<a href="https://t.me/alicolgecen">@alicolgecen</a>
