--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						</header>
 						<p>Seasoned product development manager with robust multi-sector expertise and business mindset. Proven record in establishing new channels of business, conceptualizing and testing features, and developing automation & cross-platform integrations. Skilled in Python, R, SQL, Wireframing and API Development. Speaking in Turkish, English, and Russian. Certified in Digital Demographic Research.</p>
 						<ul class="actions">
-							<li><a href="docs/cv.pdf" class="button">See My CV</a></li>
+							<li><a href="docs/ali-colgecen_product-manager_cv.pdf" class="button">See My CV</a></li>
 						</ul>
 					</section>
 
@@ -43,7 +43,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/thumbs/01.jpg" alt=""/>
 								<h3>Gazette API</h3>
-								<p>Get breaking news from leading newspapers. A beautiful harmony of parsers and NLP in a neat API. Not available to public.</p>
+								<p>Get breaking news from leading newspapers. A beautiful harmony of parsers and NLP in a neat API. Contact for a free product demo.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/thumbs/02.jpg" alt=""/>
