--- a/index.html
+++ b/index.html
@@ -41,29 +41,34 @@
 						<h2>What I do</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/thumbs/01.jpg" alt=""/>
+								<img class="image fit" src="images/work/gazetteapi.jpg" alt=""/>
 								<h3>Gazette API</h3>
 								<p>Get breaking news from leading newspapers. A beautiful harmony of parsers and NLP in a neat API. Contact for a free product demo.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/thumbs/02.jpg" alt=""/>
+								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
 								<h3>Down the Tube</h3>
-								<p>Unleash your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://usefulbits.substack.com/p/download-video-and-audio-from-youtube">Read my post.</a></p>
+								<p>Unleash your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://usefulbits.substack.com/p/download-video-and-audio-from-youtube">Read release post.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/thumbs/03.jpg" alt=""/>
+								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
+								<h3>Social Media API</h3>
+								<p>Create, update, delete and vote on social posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">Check out on Github.</a></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<img class="image fit" src="images/work/conman.jpg" alt=""/>
 								<h3>Con Man</h3>
 								<p>Create your own world of fake personalities: names, profile photos, education and employment history, so on. Work ongoing.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/thumbs/04.jpg" alt=""/>
+								<img class="image fit" src="images/work/usefulbits.jpg" alt=""/>
 								<h3>Useful Bits</h3>
 								<p>A Substack blog where I praise great products that I use every day. <a href="https://usefulbits.substack.com/">Blog home.</a></p>
 							</article>
-						</div>
+						</div> <!--
 						<ul class="actions">
 							<li><a href="https://github.com/alicolgecen" class="button">View full portfolio</a></li>
-						</ul>
+						</ul>-->
 					</section>
 
 				<!-- Three -->
