--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
 								<h3>Social Media API</h3>
-								<p>Create, update, delete and vote on social posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">Check out on Github.</a></p>
+								<p>Create, update, delete and vote on social posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">Check it out on Github.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/conman.jpg" alt=""/>
