Background + parallax changes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
+					<img class="image avatar" src="images/avatar.jpg">
 					<h1><strong>I am Ali Colgecen</strong>,<br/> a SaaS Product Manager in the day<br/>
 					and a coder in the night.<br/></h1>
 				</div>
