Remove duplicate CV button

--- a/index.html
+++ b/index.html
@@ -30,10 +30,9 @@
 						<header class="major">
 							<h2>Me in a few words</h2>
 						</header>
-						<p>Seasoned product & data professional with robust multi-sector expertise and business mindset. Proven record in establishing new channels of business, conceptualizing and testing features, and developing automation & cross-platform integrations. Skilled in Python, R, SQL, Wireframing and API Development. Speaking in Turkish, English, and Russian. Certified in Digital Demographic Research.</p>
+						<p>Seasoned SaaS product manager with robust multi-sector expertise and business mindset. Proven record in establishing new channels of business, conceptualizing and testing features, and developing automation & cross-platform integrations. Skilled in Python, R, SQL, Wireframing and API Development. Speaking in Turkish, English, and Russian. Certified in Digital Demographic Research.</p>
 						<ul class="actions">
-							<li><a href="docs/ali-colgecen_product-manager_cv.pdf" class="button">See My Product Manager CV</a>
-							<a href="docs/ali-colgecen_data-analyst_cv.pdf" class="button">See My Data Analyst CV</a></li>
+							<li><a href="docs/ali-colgecen_product-manager_cv.pdf" class="button">See My CV</a></li>
 						</ul>
 					</section>
 
