--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/gazetteapi.jpg" alt=""/>
 								<h3>Gazette API</h3>
-								<p>Read leading newspapers and journals in a smart way. Regularly parsing news, summarising with NLP and presenting it via API. Download the free dataset here.</p>
+								<p>Read leading newspapers and journals in a smart way. Regularly parsing news, summarising with NLP and presenting it via API. <a href="/docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
