Project blog name changes

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
 								<h3>Down the Tube</h3>
-								<p>Unleash your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://usefulbits.substack.com/p/download-video-and-audio-from-youtube">Read release post.</a></p>
+								<p>Unleash your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://pickwise.substack.com/p/download-video-and-audio-from-youtube">Read release post.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
@@ -61,9 +61,9 @@
 								<p>Create your own world of fake personalities: names, profile photos, education and employment history, so on. Work ongoing.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/work/usefulbits.jpg" alt=""/>
+								<img class="image fit" src="images/work/pickwise.jpg" alt=""/>
 								<h3>Useful Bits</h3>
-								<p>A Substack blog where I praise great products that I use every day. <a href="https://usefulbits.substack.com/">Blog home.</a></p>
+								<p>A blog where I praise great products that I use every day. <a href="https://pickwise.substack.com/">Blog home.</a></p>
 							</article>
 						</div> <!--
 						<ul class="actions">
