--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/pickwise.jpg" alt=""/>
-								<h3>Useful Bits</h3>
+								<h3>Pickwise</h3>
 								<p>A blog where I praise great products that I use every day. <a href="https://pickwise.substack.com/">Blog home.</a></p>
 							</article>
 						</div> <!--
