Add COVID repo and a few fixes

--- a/index.html
+++ b/index.html
@@ -43,28 +43,34 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/gazetteapi.jpg" alt=""/>
 								<h3>Gazette API</h3>
-								<p>Read leading newspapers and journals in a smart way. Regularly parsing news, summarising with NLP and presenting it via API. <a href="/docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
+								<p>Read leading newspapers and journals in a smart way. Auto news parser, NLP summarizer and an API endpoint for all operations. <a href="/docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
 								<h3>Down the Tube</h3>
-								<p>Unleash your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://pickwise.substack.com/p/download-video-and-audio-from-youtube">Read release post.</a></p>
+								<p>Download your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://pickwise.substack.com/p/download-video-and-audio-from-youtube">Read release post.</a></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<img class="image fit" src="images/work/covid-deaths.jpg" alt=""/>
+								<h3>COVID19 Excess Mortality in 2020</h3>
+								<p>I run an estimation to see how many deaths are relatable to COVID19 in 2020. Results showed extreme underreporting of deaths in Eastern Europe. Stay tuned for the full post.</p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<img class="image fit" src="images/work/pickwise.jpg" alt=""/>
+								<h3>Pickwise</h3>
+								<p>A blog for 2 goals: reviewing my favorite apps, and to provide you with life saving tips.<a href="https://pickwise.substack.com/">Blog home.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
 								<h3>Social Media API</h3>
-								<p>Create, update, delete and vote on social posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">Check it out on Github.</a></p>
+								<p>An API-based social media platform. Create, update, delete and vote on posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">See the repository.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/conman.jpg" alt=""/>
 								<h3>Con Man</h3>
 								<p>Create your own world of fake personalities: names, profile photos, education and employment history, so on. Work ongoing.</p>
 							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/work/pickwise.jpg" alt=""/>
-								<h3>Pickwise</h3>
-								<p>A blog where I praise great products that I use every day. <a href="https://pickwise.substack.com/">Blog home.</a></p>
-							</article>
+							
 						</div> <!--
 						<ul class="actions">
 							<li><a href="https://github.com/alicolgecen" class="button">View full portfolio</a></li>
