--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/covid-deaths.jpg" alt=""/>
 								<h3>COVID19 Excess Mortality in 2020</h3>
-								<p>I run an estimation to see how many deaths are relatable to COVID19 in 2020. Results showed extreme underreporting of deaths in Eastern Europe. Stay tuned for the full post.</p>
+								<p>I ran an estimation to see how many deaths are relatable to COVID19 in 24 EU and OECD countries in 2020. Results showed extreme underreporting of deaths in Eastern Europe. Stay tuned for the full post.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/pickwise.jpg" alt=""/>
