--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 			<header id="header">
 				<div class="inner">
 					<img class="image avatar" src="images/avatar.jpg">
-					<h1><strong>I am Ali Colgecen</strong>,<br/>a SaaS Product Manager in the day<br/>
-					and a coder in the night.<br/></h1>
+					<h1><strong>I am Ali Colgecen</strong>.<br/>A SaaS Product Manager by day<br/>
+					and a builder by night.<br/></h1>
 				</div>
 			</header>
 
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Me in a few words</h2>
 						</header>
-						<p>Seasoned SaaS product manager with robust multi-sector expertise and business mindset. Proven record in establishing new channels of business, conceptualizing and testing features, and developing automation & cross-platform integrations. Skilled in Python, R, SQL, Wireframing and API Development. Speaking in Turkish, English, and Russian. Certified in Digital Demographic Research.</p>
+						<p>Seasoned SaaS product manager with robust multi-sector expertise and a business mindset. Proven record in establishing new channels of business, conceptualizing and testing features, and developing automation & cross-platform integrations. Skilled in Python, R, SQL, Wireframing and API Development. Speaks Turkish, English, and Russian. Certified in Digital Demographic Research.</p>
 						<ul class="actions">
 							<li><a href="docs/ali-colgecen_product-manager_cv.pdf" class="button">See My CV</a></li>
 						</ul>
@@ -58,7 +58,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/pickwise.jpg" alt=""/>
 								<h3>Pickwise</h3>
-								<p>A blog for 2 goals: reviewing my favorite apps, and to provide you with life saving tips.<a href="https://pickwise.substack.com/">Blog home.</a></p>
+								<p>A blog for 2 goals: reviewing my favorite apps, and to provide you with productivity hacks.<a href="https://pickwise.substack.com/">Blog home.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
