Add Treasury app

--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
 								<p>Read leading newspapers and journals in a smart way. Auto news parser, NLP summarizer and an API endpoint for all operations. <a href="/docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<img class="image fit" src="images/work/treasuryapp.jpg" alt=""/>
+								<h3>Treasury App</h3>
+								<p>Understanding your financial standing has never been easier. Download the app, add your assets and track your wealth in real time. <a href="docs/treasury-app.pdf">See the product case study.</a></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
 								<h3>Down the Tube</h3>
 								<p>Download your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://pickwise.substack.com/p/download-video-and-audio-from-youtube">Read release post.</a></p>
