Several updates on content

--- a/index.html
+++ b/index.html
@@ -43,12 +43,22 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/gazetteapi.jpg" alt=""/>
 								<h3>Gazette API</h3>
-								<p>Read leading newspapers and journals in a smart way. Auto news parser, NLP summarizer and an API endpoint for all operations. <a href="/docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
+								<p>Read leading newspapers and journals in a smart way. Industry-level news scraper with GPT powered algorithms, NLP summarizer and an API endpoint for all purposes. <a href="/docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/treasuryapp.jpg" alt=""/>
 								<h3>Treasury App</h3>
 								<p>Understanding your financial standing has never been easier. Download the app, add your assets and track your wealth in real time. <a href="docs/treasury-app.pdf">See the product case study.</a></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<img class="image fit" src="images/work/adops-slackapp.jpg" alt=""/>
+								<h3>Slack Alert Bot</h3>
+								<p>A Slack alert bot for an advertisement operations company. It includes a service to ensure continuous data flow from their partners, a new database to keep records, and a bot regularly tracking campaign health and sending alerts via Slack app. <a href="mailto:ali@colgecen.co">Contact me for a demo.</a></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
+								<img class="image fit" src="images/work/linkedin-scraper.jpg" alt=""/>
+								<h3>LinkedIn Public Profile Scraper</h3>
+								<p>A Python script to extract publicly available information from target LinkedIn profiles. It has many modes to choose from: either search for profiles on Standard or Premium LinkedIn and paste the search results link or directly input target profile links. It spared my client from a very expensive data vendor contract and outdated profile information. <a href="mailto:ali@colgecen.co">Contact me for a demo.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
@@ -69,11 +79,6 @@
 								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
 								<h3>Social Media API</h3>
 								<p>An API-based social media platform. Create, update, delete and vote on posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">See the repository.</a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/work/conman.jpg" alt=""/>
-								<h3>Con Man</h3>
-								<p>Create your own world of fake personalities: names, profile photos, education and employment history, so on. Work ongoing.</p>
 							</article>
 							
 						</div> <!--
