Updated contacts and fixed minor mistakes

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/gazetteapi.jpg" alt=""/>
 								<h3>Gazette API</h3>
-								<p>Read leading newspapers and journals in a smart way. Industry-level news scraper with GPT powered algorithms, NLP summarizer and an API endpoint for all purposes. <a href="/docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
+								<p>Read leading newspapers and journals in a smart way. Industry-level news scraper with GPT powered algorithms, NLP summarizer and an API endpoint for all purposes. <a href="docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/treasuryapp.jpg" alt=""/>
@@ -61,14 +61,14 @@
 								<p>A Python script to extract publicly available information from target LinkedIn profiles. It has many modes to choose from: either search for profiles on Standard or Premium LinkedIn and paste the search results link or directly input target profile links. It spared my client from a very expensive data vendor contract and outdated profile information. <a href="mailto:ali@colgecen.co">Contact me for a demo.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
+								<h3>Social Media API</h3>
+								<p>An API-based social media platform. Create, update, delete and vote on posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">See the repository.</a></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
 								<h3>Down the Tube</h3>
 								<p>Download your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://pickwise.substack.com/p/download-video-and-audio-from-youtube">Read release post.</a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/work/covid-deaths.jpg" alt=""/>
-								<h3>COVID19 Excess Mortality in 2020</h3>
-								<p>I ran an estimation to see how many deaths are relatable to COVID19 in 24 EU and OECD countries in 2020. Results showed extreme underreporting of deaths in Eastern Europe. Stay tuned for the full post.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/pickwise.jpg" alt=""/>
@@ -76,9 +76,9 @@
 								<p>A blog for 2 goals: reviewing my favorite apps, and to provide you with productivity hacks.<a href="https://pickwise.substack.com/">Blog home.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
-								<h3>Social Media API</h3>
-								<p>An API-based social media platform. Create, update, delete and vote on posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">See the repository.</a></p>
+								<img class="image fit" src="images/work/covid-deaths.jpg" alt=""/>
+								<h3>COVID19 Excess Mortality in 2020</h3>
+								<p>I ran an estimation to see how many deaths are relatable to COVID19 in 24 EU and OECD countries in 2020. Results showed extreme underreporting of deaths in Eastern Europe. Stay tuned for the full post.</p>
 							</article>
 							
 						</div> <!--
@@ -113,7 +113,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:ali@colgecen.co">ali@colgecen.co</a>
+										<a href="mailto:acolgecen@pm.me">acolgecen@pm.me</a>
 									</li>
 								</ul>
 							</div>
