--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/acolgecen/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/alicolgecen" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://t.me/alicolgecen" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
-						<li><a href="mailto:ali@colgecen.co" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:acolgecen@pm.me" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Ali Colgecen</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
