--- a/index.html
+++ b/index.html
@@ -53,12 +53,12 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/adops-slackapp.jpg" alt=""/>
 								<h3>Slack Alert Bot</h3>
-								<p>A Slack alert bot for an advertisement operations company. It includes a service to ensure continuous data flow from their partners, a new database to keep records, and a bot regularly tracking campaign health and sending alerts via Slack app. <a href="mailto:ali@colgecen.co">Contact me for a demo.</a></p>
+								<p>A Slack alert bot for an advertisement operations company. It includes a service to ensure continuous data flow from their partners, a new database to keep records, and a bot regularly tracking campaign health and sending alerts via Slack app. <a href="mailto:acolgecen@pm.me">Contact me for a demo.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/linkedin-scraper.jpg" alt=""/>
 								<h3>LinkedIn Public Profile Scraper</h3>
-								<p>A Python script to extract publicly available information from target LinkedIn profiles. It has many modes to choose from: either search for profiles on Standard or Premium LinkedIn and paste the search results link or directly input target profile links. It spared my client from a very expensive data vendor contract and outdated profile information. <a href="mailto:ali@colgecen.co">Contact me for a demo.</a></p>
+								<p>A Python script to extract publicly available information from target LinkedIn profiles. It has many modes to choose from: either search for profiles on Standard or Premium LinkedIn and paste the search results link or directly input target profile links. It spared my client from a very expensive data vendor contract and outdated profile information. <a href="mailto:acolgecen@pm.me">Contact me for a demo.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
@@ -94,7 +94,7 @@
 						<!--
 							<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="mailto:ali@colgecen.co">
+								<form method="post" action="mailto:acolgecen@pm.me">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
