Down The Tube link change

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
 								<h3>Down the Tube</h3>
-								<p>Download your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://pickwise.substack.com/p/download-video-and-audio-from-youtube">Read release post.</a></p>
+								<p>Download your favorite content from YouTube in form of audio and video. Playlists are supported as well. <a href="https://deepnote.com/@alicolgecen/Down-the-Tube-ebba133d-132b-4030-b38b-b0395b861451">Read release post.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/pickwise.jpg" alt=""/>
