Change summary and CV

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 						<header class="major">
 							<h2>Me in a few words</h2>
 						</header>
-						<p>Seasoned SaaS product manager with robust multi-sector expertise and a business mindset. Proven record in establishing new channels of business, conceptualizing and testing features, and developing automation & cross-platform integrations. Skilled in Python, R, SQL, Wireframing and API Development. Speaks Turkish, English, and Russian. Certified in Digital Demographic Research.</p>
+						<p>Seasoned product development manager with robust multi-sector expertise and business mindset. Proven record in product strategy, data analysis, and building automation & cross-platform integrations. Specialized in AI products, API applications, product metrics and user monitoring tools. Certified in advanced product development and business intelligence.</p>
 						<ul class="actions">
 							<li><a href="docs/ali-colgecen_product-manager_cv.pdf" class="button">See My CV</a></li>
 						</ul>
