Add Text Extractor API

--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
 								<p>Understanding your financial standing has never been easier. Download the app, add your assets and track your wealth in real time. <a href="docs/treasury-app.pdf">See the product case study.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
+								<img class="image fit" src="images/work/text-extractor.jpeg" alt=""/>
+								<h3>Text Extraction API</h3>
+								<p>Extract text from your non-OCR Word and PDF documents like a pro. This streamlined API returns all pieces of text from your documents. <a href="docs/text-extractor.zip">Download example files.</a></p>
+							</article>
+							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/adops-slackapp.jpg" alt=""/>
 								<h3>Slack Alert Bot</h3>
 								<p>A Slack alert bot for an advertisement operations company. It includes a service to ensure continuous data flow from their partners, a new database to keep records, and a bot regularly tracking campaign health and sending alerts via Slack app. <a href="mailto:ali@colgecen.co">Contact me for a demo.</a></p>
