--- a/index.html
+++ b/index.html
@@ -58,12 +58,7 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/adops-slackapp.jpg" alt=""/>
 								<h3>Slack Alert Bot</h3>
-								<p>A Slack alert bot for an advertisement operations company. It includes a service to ensure continuous data flow from their partners, a new database to keep records, and a bot regularly tracking campaign health and sending alerts via Slack app. <a href="mailto:ali@colgecen.co">Contact me for a demo.</a></p>
-							</article>
-							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/work/linkedin-scraper.jpg" alt=""/>
-								<h3>LinkedIn Public Profile Scraper</h3>
-								<p>A Python script to extract publicly available information from target LinkedIn profiles. It has many modes to choose from: either search for profiles on Standard or Premium LinkedIn and paste the search results link or directly input target profile links. It spared my client from a very expensive data vendor contract and outdated profile information. <a href="mailto:ali@colgecen.co">Contact me for a demo.</a></p>
+								<p>A Slack alert bot for an advertisement operations company. It includes a service to ensure continuous data flow from their partners, a new database to keep records, and a bot regularly tracking campaign health and sending alerts via Slack app. <a href="mailto:acolgecen@outlook.com">Contact me for a demo.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
@@ -110,7 +105,7 @@
 						<!--
 							<div class="row">
 							<div class="col-8 col-12-small">
-								<form method="post" action="mailto:ali@colgecen.co">
+								<form method="post" action="mailto:acolgecen@outlook.com">
 									<div class="row gtr-uniform gtr-50">
 										<div class="col-6 col-12-xsmall"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="col-6 col-12-xsmall"><input type="email" name="email" id="email" placeholder="Email" /></div>
@@ -129,7 +124,7 @@
 									</li>
 									<li>
 										<h3 class="icon solid fa-envelope"><span class="label">Email</span></h3>
-										<a href="mailto:ali@colgecen.co">ali@colgecen.co</a>
+										<a href="mailto:acolgecen@outlook.com">acolgecen@outlook.com</a>
 									</li>
 								</ul>
 							</div>
@@ -462,7 +457,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="https://www.linkedin.com/in/acolgecen/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 						<li><a href="https://github.com/alicolgecen" class="icon brands fa-github"><span class="label">Github</span></a></li>
 						<li><a href="https://t.me/alicolgecen" class="icon brands fa-telegram"><span class="label">Telegram</span></a></li>
-						<li><a href="mailto:ali@colgecen.co" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+						<li><a href="mailto:acolgecen@outlook.com" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>&copy; Ali Colgecen</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
