--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
 						<h2>What I do</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/work/gazetteapi.jpg" alt=""/>
-								<h3>Gazette API</h3>
-								<p>Read leading newspapers and journals in a smart way. Industry-level news scraper with GPT powered algorithms, NLP summarizer and an API endpoint for all purposes. <a href="docs/gazetteapi-articles-data.csv">See the free dataset.</a></p>
+								<img class="image fit" src="images/work/newsboy-api.jpg" alt=""/>
+								<h3>Newsboy API</h3>
+								<p>Read leading newspapers and journals in a smart way. Industry-level news scraper with GPT powered algorithms, NLP summarizer and an API endpoint for all purposes. <a href="docs/newsboyapi-articles-data.csv">See the free dataset.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/treasuryapp.jpg" alt=""/>
@@ -52,7 +52,7 @@
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/text-extractor.jpeg" alt=""/>
-								<h3>Text Extraction API</h3>
+								<h3>Reading Glass API</h3>
 								<p>Extract text from your non-OCR Word and PDF documents like a pro. This streamlined API returns all pieces of text from your documents. <a href="docs/text-extractor.zip">Download example files.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -61,9 +61,9 @@
 								<p>A Slack alert bot for an advertisement operations company. It includes a service to ensure continuous data flow from their partners, a new database to keep records, and a bot regularly tracking campaign health and sending alerts via Slack app. <a href="mailto:acolgecen@outlook.com">Contact me for a demo.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<img class="image fit" src="images/work/socialmediaapi.jpg" alt=""/>
-								<h3>Social Media API</h3>
-								<p>An API-based social media platform. Create, update, delete and vote on posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/SocialMediaAPI">See the repository.</a></p>
+								<img class="image fit" src="images/work/boardsocialapi.jpg" alt=""/>
+								<h3>Board Social API</h3>
+								<p>An API-based social media platform. Create, update, delete and vote on posts. Complete user control on what is shared and updates on what's trending. <a href="https://github.com/alicolgecen/Board-Social-API">See the repository.</a></p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<img class="image fit" src="images/work/downthetube.jpg" alt=""/>
